# tensorrt-detectron

./: CMakeLists.txt  README.md  a.out  main.cpp  pickle2caffe_FPN.py  test.cpp  test.cu  yolov3_608_trt.calib  yolov3_608_trt.prototxt
cmake/Modules/: FindCUB.cmake
include/: common_gpu.h
include/caffe2/utils/: eigen_utils.h  generate_proposals_op_util_nms.h
include/cub/: CMakeLists.txt  common.mk
include/cub/cmake/Modules/: FindCUB.cmake
include/cub/cub/device/: device_segmented_radix_sort.cuh
include/cub/examples/block/: example_block_radix_sort.cu
include/cub/examples/device/: example_device_radix_sort.cu
install/: runYolov3  yolov3_608.prototxt  yolov3_608.prototxt~
tensorRTWrapper/code/: CMakeLists.txt
tensorRTWrapper/code/include/: BatchPermuteLayer.h  BoxTransformLayer.h  BoxWithNMSLimitLayer.h  CollectNDistributeFPNLayer.h  GenerateProposalLayer.h  PluginFactory.h  ResizeNearest.h  RoIAlign.h  TrtNet.h  box_transform.h  generate_proposals_op.h  generate_proposals_op_util_boxes.hpp  generate_proposals_op_util_nms_gpu.h
tensorRTWrapper/code/src/: BatchPermuteLayer.cpp  BatchPermuteLayer.cu  BoxTransformLayer.cpp  BoxTransformLayer.cu  BoxWithNMSLimitLayer.cpp  CollectNDistributeFPNLayer.cpp  CollectNDistributeFPNLayer.cu  GenerateProposalLayer.cu  ResizeNearest.cpp  ResizeNearest.cu  RoIAlign.cu  TrtNet.cpp  UpsampleLayer.cpp  UpsampleLayer.cu  YoloLayer.cu  generate_proposals_op.cu  generate_proposals_op_util_nms_gpu.cu
